update and logout endpoint added
